# auth_app

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: 2025_12_08_1419_809e2f0676ef.py  2025_12_08_1424_8fea6e968541.py  2025_12_08_1429_3bc6480e78dd.py  2025_12_08_1432_2ef8938c0b54.py  2025_12_11_2314_04a9d7f7b5a1.py  2025_12_12_0400_add_user_names_001.py
src/: config.py  main.py
src/data/: domain.py
src/modules/auth/: auth_app.py  auth_dto.py  auth_metier.py  auth_model.py  auth_repo.py  auth_router.py
tests/: conftest.py  test_auth.py
